frog and toad are uploaded onto title page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/title-page.css">
     <title>Document</title>
 </head>
 
@@ -24,7 +25,20 @@
     <main>
 
         <section class="main-section">
-          hello
+            <h1>WELCOME to the Hollow</h1>
+
+            <div>
+                <label class="toad-character-choice">
+                    <input type="radio" name="frogtoad" value="" checked>     
+                    <img src="./assets/Toad.jpg">
+                </label>
+
+                <label class="frog-character-choice">
+                    <input type="radio" name="frogtoad" value="">     
+                    <img src="./assets/frog.jpg">
+                </label>
+            </div>
+            
         </section>
     
     </main>
