--- a/map/index.html
+++ b/map/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/map.css">
 
     <title>Document</title>
 </head>
@@ -26,7 +27,9 @@
 
         <section class="main-section">
             <nav id="adventures">
-                
+                <ul>
+                    
+                </ul>
             </nav>
         </section>
 
