--- a/adventure-folder/index.html
+++ b/adventure-folder/index.html
@@ -25,14 +25,12 @@
     <main>
 
         <section id="section">
-            <h3 id="title"></h3>
-            <p id="description"></p>
             <form id="choice-form">
-                <p id="choices">
-
-                </p>
-                <button></button>
+           
             </form>
+
+            <div id="result"></div>
+            <div id="result-description"
         </section>
     
     </main>
