logs state but wont append to upper right corner.

--- a/adventure-folder/index.html
+++ b/adventure-folder/index.html
@@ -17,7 +17,9 @@
 
 <body>
     <header>
-       <span id="name">FROG or TOAD</span><span id="buttons">0</span><span id="grumpyLevel">0</span>
+       <span id="name"></span>
+       <span id="buttons">buttons</span>
+       <span id="grumpyLevel">Grumpy Level</span>
     </header>
 
     <!-- header-------------------------------------------- -->
@@ -27,6 +29,8 @@
         <section id="section">
             
             <h3 id="title"></h3>
+
+            <div><img id="image"></div>
 
             <div id="first">
                 
