--- a/map/index.html
+++ b/map/index.html
@@ -18,8 +18,10 @@
 
 <body>
     <header>
-        <span id="name">FROG or TOAD</span><span id="buttons">0</span><span id="grumpyLevel">0</span>
-    </header>
+        <span id="name"></span>
+        <span id="buttons">buttons</span>
+        <span id="grumpyLevel">Grumpy Level</span>
+     </header>
 
     <!-- header-------------------------------------------- -->
 
