will go all the way to the results page, yay

--- a/adventure-folder/index.html
+++ b/adventure-folder/index.html
@@ -17,9 +17,9 @@
 
 <body>
     <header>
-       <span id="name"></span>
-       <span id="buttons">buttons</span>
-       <span id="grumpyLevel">Grumpy Level</span>
+       <div id="name"></div>
+       <div id="buttons">buttons</div>
+       <div id="grumpyLevel">Grumpy Level</div>
     </header>
 
     <!-- header-------------------------------------------- -->
